; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_is_prefix_wa.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_is_prefix_wa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @is_prefix_wa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_prefix_wa(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [512 x i64], align 16
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* @CP_ACP, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds [512 x i64], [512 x i64]* %8, i64 0, i64 0
  %12 = call i32 @WideCharToMultiByte(i32 %9, i32 0, i32* %10, i32 -1, i64* %11, i32 4096, i32* null, i32* null)
  %13 = sub nsw i32 %12, 1
  store i32 %13, i32* %6, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @lstrlenA(i8* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %3, align 4
  br label %31

21:                                               ; preds = %2
  %22 = load i32, i32* %7, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds [512 x i64], [512 x i64]* %8, i64 0, i64 %23
  store i64 0, i64* %24, align 8
  %25 = getelementptr inbounds [512 x i64], [512 x i64]* %8, i64 0, i64 0
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 @lstrcmpA(i64* %25, i8* %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %21, %19
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i64*, i32, i32*, i32*) #1

declare dso_local i32 @lstrlenA(i8*) #1

declare dso_local i32 @lstrcmpA(i64*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
